--- a/public/index.html
+++ b/public/index.html
@@ -21,5 +21,14 @@
   <!-- built files will be auto injected -->
 </body>
 <script src="/js/theme.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BZQP3L98RW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BZQP3L98RW');
+</script>
 
 </html>
